Upgrading CXF, Elasticsearch and OpenSearch